js/js.translator/testData/incremental/invalidation/defaultParamMethod/main/crossUsage2.kt
internal fun crossUsage2() = usage2(A())